Subiendo Actualización de Lyft

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <!-- Agrega aquí la estructura HTML de tu sitio web -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>A ride whenever you need one-Lyft</title>
+  </head>
+  <body>
+    <header id="Menu">
+      <img src="assets/images/logo-pink.png" alt="">
+    </header>
+
+  </body>
+</html>
