--- a/index.html
+++ b/index.html
@@ -4,11 +4,97 @@
   <head>
     <meta charset="utf-8">
     <title>A ride whenever you need one-Lyft</title>
+
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <video class="hero" src="hero-video-opt.mp4" autoplay poster="posterimage.jpg"></video>
+    <a href="#"><img class="logo_white" src="assets/images/logo-white.png" alt=""></a>
+
     <header id="Menu">
-      <img src="assets/images/logo-pink.png" alt="">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
+      <!--    <a href="#"><img class="logo-pink" src="assets/images/logo-pink.png" alt=""> </a> -->
+      <ul>
+        <li><a href="#">Drive</a></li>
+        <li><a href="#">Explore <i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+        <li><a href="#">Help</a></li>
+      </ul>
+      <a class="log_in" href="#">Log in</a>
     </header>
+
+    <section id="Etiqueta">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Permanent+Marker" rel="stylesheet">
+      <h1>turn miles into money</h1>
+      <h5>sign up to drive with lyft.</h5>
+      <input type="text" placeholder="Phone number"= class="formulario">
+      <a class="become" href="#">Become a Driver</a>
+      <a class="sig" href="#">Sign Up To Ride</a>
+      <ul>
+        <li>Already applied? <a class="check" href="#">Check the status of your application here.</a></li>
+        <li>Earn money for inviting friends to drive.<a class="check" href="#">Learn more</a></li>
+      </ul>
+    </section>
+
+    <section id="Phone">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
+
+      <div class="uno">
+        <h3>a ride in minutes</h3>
+        <p>Request a ride and you’ll be on your way in minutes. Request. Ride. Repeat.</p>
+      </div>
+
+      <div class="dos">
+        <h3>serious about safety</h3>
+        <p>From knowing the color of your driver’s car to our 24/7 Trust & Safety Team, we got you.</p>
+      </div>
+
+      <div class="tres">
+        <h3>happy drivers. happy riders.</h3>
+        <p>Ride with us and you’ll see why 9 out of 10 rides end with five stars.</p>
+      </div>
+
+      <img class="phone_img" src="assets/images/phone.png" alt="">
+    </section>
+
+    <section id="videos">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
+
+      <div class="video1">
+        <h6>watch</h6>
+        <h1>amplyfi your ride</h1>
+        <h5>Lift's new emblem, Amp, is the secret to smooth pickups. Lighting up dashboards nationwide, the device makes it easy for passengers and drivers to find each other.</h5>
+        <ul>
+          <li><iframe class="iframe1" width="854" height="480" src="https://www.youtube.com/embed/fLSmUWOYpKw" frameborder="0" gesture="media" allowfullscreen></iframe></li>
+        </ul>
+      </div>
+
+      <div class="video2">
+        <h5>watch</h5>
+        <h1>june</h1>
+        <h6>In an animated short film by Academy Award-winner Jhon Kahrs, a lonely widow in historic South Chicago is empowered to start sharing the ride-and sharing her life, too.</h6>
+        <ul>
+          <li><iframe class="iframe2" width="854" height="480" src="https://www.youtube.com/embed/V7j8Aqxmbs8" frameborder="0" gesture="media" allowfullscreen></iframe></li>
+        </ul>
+      </div>
+
+      <div class="video3">
+        <h6>watch</h6>
+        <h1>a good thing going</h1>
+        <h5>Launching on TV and online, "Ride on the Bright Side" shows how Lyft continues to prioritize happy drivers, short ETAs, and safety.</h5>
+        <ul>
+          <li><iframe class="iframe3" width="854" height="480" src="https://www.youtube.com/embed/xj2VWLV0xCU" frameborder="0" gesture="media" allowfullscreen></iframe></li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="Learn">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Permanent+Marker" rel="stylesheet">
+      <a href="#">learn More</a>
+      <h1>round up & donate</h1>
+      <p>Opt in and we’ll round up each fare to the nearest dollar, then donate the difference to a charitable cause of your choice.</p>
+      <video class="heart" src="round-up-and-donate.mp4" autoplay poster="posterimage.jpg"></video>
+    </section>
 
   </body>
 </html>
